Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-2551] Calendar initializer crashes with an error when using Swift binaries 8/30 & 9/01 #4451

Closed
swift-ci opened this issue Sep 2, 2016 · 2 comments

Comments

@swift-ci
Copy link
Contributor

swift-ci commented Sep 2, 2016

Previous ID SR-2551
Radar None
Original Reporter chialh (JIRA User)
Type Bug
Status Resolved
Resolution Done

Attachment: Download

Environment

Ubuntu 14.04
Ubuntu 15

Additional Detail from JIRA
Votes 3
Component/s Foundation
Labels Bug, Linux, RunTimeCrash
Assignee @alblue
Priority Medium

md5: 5ec20e9926b6fa735e9cc5681c0ede9e

Issue Description:

Using the Swift binaries from 8/30 and 9/01, the Calendar class initializer crashes on Linux (Ubuntu 14.04 & Ubuntu 15.10) when specifying the iso8601 or buddhist identifiers. To reproduce the error, please use the Swift package in the zip file. See the code in the main.swift file. Executing the program on OS X will work just fine but on Ubuntu 14.04 & 15.10, it will crash with the error shown below:

root: ~/Project/SwiftCalendar$ swift build
root: ~/Project/SwiftCalendar$ ./.build/debug/SwiftCalendar
Linux: Before initialize instance of Calendar
Linux: Calendar instance is initialized <CFCalendar 0x1d71a10 [0x7f0177ccd870]>{identifier = 'buddhist'}
End
Linux: Before initialize instance of Calendar
Illegal instruction (core dumped)

@alblue
Copy link
Contributor

alblue commented Oct 4, 2016

Created pull request with some minimal tests to add the other calendar types. Comments welcome.

#667

@alblue
Copy link
Contributor

alblue commented Oct 7, 2016

Created new pull request, since I accidentally closed the old one:

#677

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
@shahmishal shahmishal transferred this issue from swiftlang/swift May 5, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Projects
None yet
Development

No branches or pull requests

2 participants